--- a/Parlor/EditClient.storyboard
+++ b/Parlor/EditClient.storyboard
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TNJ-vv-ANl">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="TNJ-vv-ANl">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--EDIT CLIENT-->
+        <!--Edit ClientVC-->
         <scene sceneID="SgK-i6-mEM">
             <objects>
-                <viewController id="TNJ-vv-ANl" customClass="EditClientVC" customModule="Prossimo" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="TNJ-vv-ANl" customClass="EditClientVC" customModule="Parlor" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="XPT-Kq-j73"/>
                         <viewControllerLayoutGuide type="bottom" id="Lpd-CI-wWv"/>
@@ -114,11 +114,9 @@
                             <constraint firstItem="aaP-Ux-xei" firstAttribute="top" secondItem="XPT-Kq-j73" secondAttribute="bottom" constant="138" id="w8Z-yE-H8A"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="EDIT CLIENT" id="iXh-yo-EvI"/>
+                    <navigationItem key="navigationItem" id="Zj8-53-Fu6"/>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO">
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </simulatedNavigationBarMetrics>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="imgView" destination="GHG-Jg-di8" id="Zgl-wF-sIP"/>
