--- a/Parlor/Money.storyboard
+++ b/Parlor/Money.storyboard
@@ -27,10 +27,10 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
-                        <label key="tableFooterView" opaque="NO" userInteractionEnabled="NO" alpha="0.59999999999999998" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hlq-3x-nRn">
+                        <label key="tableFooterView" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hlq-3x-nRn">
                             <rect key="frame" x="0.0" y="133" width="375" height="43"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                            <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="13"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
@@ -51,21 +51,18 @@
                         </connections>
                     </tableView>
                     <toolbarItems/>
-                    <navigationItem key="navigationItem" title="Expenses" id="P7j-06-VMe">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="H6z-j4-QMh">
-                            <color key="tintColor" red="0.38431372549999998" green="0.87058823529999996" blue="0.99215686270000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <navigationItem key="navigationItem" title="Expenses" id="QqI-V4-nhx">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="nYh-JQ-ONg">
                             <connections>
-                                <action selector="plusClicked:" destination="I5V-oI-fJR" id="G71-zx-XSF"/>
+                                <action selector="plusClicked:" destination="I5V-oI-fJR" id="UDH-lM-Wsr"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" barStyle="black" prompted="NO">
-                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </simulatedNavigationBarMetrics>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="btnAddExpenses" destination="H6z-j4-QMh" id="dE0-2H-49g"/>
+                        <outlet property="btnAddExpenses" destination="nYh-JQ-ONg" id="20y-IC-5fc"/>
                         <outlet property="labelTotalExpenses" destination="hlq-3x-nRn" id="grh-TM-dSK"/>
                         <outlet property="tableView" destination="HRG-E0-Gj6" id="ZNd-XN-VDG"/>
                         <segue destination="pwm-VI-swW" kind="show" identifier="expenseDetailsSegue" id="hfX-iF-M2h"/>
@@ -82,7 +79,7 @@
                 <viewControllerPlaceholder storyboardName="ExpenseDetails" id="pwm-VI-swW" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VUz-ll-WRm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2974" y="-607"/>
+            <point key="canvasLocation" x="3017" y="-797"/>
         </scene>
     </scenes>
 </document>
