--- a/Parlor/Base.lproj/LaunchScreen.storyboard
+++ b/Parlor/Base.lproj/LaunchScreen.storyboard
@@ -5,7 +5,7 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13174"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,6 +36,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="Tre-Bb-hFU" secondAttribute="trailing" id="9te-z2-2Hf"/>
                             <constraint firstItem="Tre-Bb-hFU" firstAttribute="leading" secondItem="Q1J-jn-Z2g" secondAttribute="leadingMargin" id="EIY-On-gw0"/>
